# Blog-CLI

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: coverage.yml  deploy.yml  rc-test.yml  rust.yml
src/: cli.rs  header.rs  main.rs  pexel.rs  post.rs  tests.rs  utils.rs
