[package]
name = "blog"
version = "0.1.8"
edition = "2021"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"
description = "A CLI tool to manage blog posts"
readme = "README.md"
homepage = "https://github.com/Minigrim0/Blog-CLI"
repository = "https://github.com/Minigrim0/Blog-CLI"
keywords = ["cli", "blog", "managment"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
colog = "1.3.0"
dotenv = "0.15.0"
log = "0.4.25"
markdown = "1.0.0-alpha.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
slugify = "0.1.0"
tokio = "1.43.0"
toml = "0.8.20"
